--- a/index.html
+++ b/index.html
@@ -105,15 +105,6 @@ li a:hover {
 </style>
 </head>
 <body>
-<?php
-// This is for analytics or something.
-$utime = strval(time());
-file_put_contents("/home/www-data/doggoli-visitors.log", "[{$utime}]IP {$_SERVER['REMOTE_ADDR']} viewed the homepage.\n", FILE_APPEND);
-
-// beta testing - new analytics engine
-include('/home/www-data/analytics.php');
-
-?>
 
     <div id="cdiv">
     </div>
@@ -121,9 +112,9 @@ include('/home/www-data/analytics.php');
 
     <ul>
         
-        <li><a href="contact.php">Contact me.</a></li>
-        <li><a href="about.php">About me.</a></li>
-        <li><a href="radio.php">Radio</a></li>
+        <li><a href="contact.html">Contact me.</a></li>
+        <li><a href="about.html">About me.</a></li>
+        <li><a href="radio.html">Radio</a></li>
         <li style=" float: right; font-style: italic; color: white; padding-right: 15px; font-family: Courier New; font-size: 14px; font-style: bold;"><p>Hi, i'm Doggoli.</p></li>
 
 
