--- a/index.html
+++ b/index.html
@@ -73,11 +73,6 @@ li {
 }
 
 
- .divlol {
-
-
-
- }
 
 li a {
     display: block;
@@ -115,7 +110,7 @@ li a:hover {
         <li><a href="contact.html">Contact me.</a></li>
         <li><a href="about.html">About me.</a></li>
         <li><a href="radio.html">Radio</a></li>
-        <li style=" float: right; font-style: italic; color: white; padding-right: 15px; font-family: Courier New; font-size: 14px; font-style: bold;"><p>Hi, i'm Doggoli.</p></li>
+        <li style=" float: right; font-style: italic; color: white; padding-right: 15px; font-family: Courier New; font-size: 14px;"><p>Hi, i'm Doggoli.</p></li>
 
 
     </ul>
