--- a/radio.html
+++ b/radio.html
@@ -6,7 +6,7 @@
 		<style>
 
 			
-		.blogtitle {
+		.title {
 
     	text-align: center;
     	font-size: 20px;
@@ -90,6 +90,12 @@
 		}
 
 
+@font-face {
+    font-family: Courier New;
+    src: url(courier.ttf);
+}
+
+
 
 		</style>	
 	</head>
@@ -112,15 +118,15 @@ include('/home/www-data/analytics.php');
 		<p>Radio</p>
 		</div>
 			
-		<div class="blogtitle">
-		<p>Pretty much just a radio that broadcasts my entire music library, shuffled.</p> 
+		<div class="title">
+		<p>Pretty much just a radio that broadcasts my entire music library, shuffled. Or not, sometimes i just wanna listen to what i wanna listen to.</p> 
 		</div>
 
 		<div class="textdiv">
 		It wont broadcast every day, nor is there a schedule for when the broadcast starts (im too busy for that shit).	
 		</div>
 
-		<div class="blogtitle">
+		<div class="title">
 		<p>Enjoy the shity music and if you are an artist that is against me playing your music on this station, contact me at: idontgiveashit@fuckoff.com</p>
 		</div>
 
