does this shit fucking work

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ include('/home/www-data/analytics.php');
 
     <div id="cuntdiv">    
 
-    <p>I am a lazy student from Serbia, i'm a Mac & PC (and sometimes linux) user, i like doing nothing and i specialize in absolutely nothing! This website is hosted on github, and it's the only thing there, so, no need to check my github page... That would be about it, if you wish to read more about me, fuck off, go live your own life. </p>
+    <p>I am a lazy student from Serbia, i'm a Mac & PC (and sometimes linux) user, i like doing nothing and i specialize in absolutely nothing! This website is hosted on GitHub, and it's the only thing there, so, no need to check my github page... That would be about it, if you wish to read more about me, fuck off, go live your own life. </p>
 	
      
     </div>
