not my privacy policy

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@ li a:hover {
 
     <div class="copyright">
 
-    	<p>(C) 2018 Doggoli. If you copy it i will be mad, but, buy me a coke and we're cool.
-        <a href="https://f00f.xyz/privacy/policy.php">Privacy or smth.</a></p>
+    	<p>(C) 2018 Doggoli. If you copy it i will be mad, but, buy me a coke and we're cool.</p>
 
     </div> 	
 
