added funny picture to radio page

--- a/radio.html
+++ b/radio.html
@@ -57,7 +57,7 @@
 	
 		.nigger {
 
-		position: fixed;
+		
 		font-size: 14px;
 		left:0;
 	    bottom: 0;
@@ -117,8 +117,12 @@
 
 		<div class="title">
 		<p>Enjoy the shity music and if you are an artist that is against me playing your music on this station, contact me at: idontgiveashit@fuckoff.com</p>
+		<br>
+		<img src="dog.png" height="518" width="618">
 		</div>
 
+
+		<br>
 		<br>
 
 		<div class="buttoncunt">
