just fucking do it cunt

--- a/radio.html
+++ b/radio.html
@@ -118,7 +118,9 @@
 		<div class="title">
 		<p>Enjoy the shity music and if you are an artist that is against me playing your music on this station, contact me at: idontgiveashit@fuckoff.com</p>
 		<br>
+		<a href="dog.png">
 		<img src="dog.png" height="518" width="618">
+		</a>
 		</div>
 
 
