just fucking do it cunt

--- a/about.html
+++ b/about.html
@@ -96,8 +96,9 @@ a {
    <div class="container">
         <p>My Desk Setup</p>
     </div>
-
+    <a href="setup.jpeg">
     <img src="setup.jpeg" height="400" width="550">
+    </a>
 
 
     <p>The specs of my computers!</p>
