just fucking do it cunt

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     font-family: Helvetica Neue;
 }
 
-.nigger {
+.footer {
 
     font-size: 12px;
     position: static;
@@ -126,7 +126,7 @@ a {
 
 
 
-    <div class="nigger">
+    <div class="footer">
     <p>(C) 2018 Doggoli. If you copy it i will be mad, but, buy me a coke and we're cool.</p>
     </div>
 
