--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     
 }
 
-.nigger {
+.footer {
 
     font-size: 14px;
     position: fixed;
@@ -76,7 +76,7 @@ a {
 
     </div>
 
-    <div class="nigger">
+    <div class="footer">
     <p>(C) 2018 Doggoli. If you copy it i will be mad, but, buy me a coke and we're cool.</p>
     </div>           
     <br>
