--- a/radio.html
+++ b/radio.html
@@ -55,7 +55,7 @@
 
 
 	
-		.nigger {
+		.footer {
 
 		
 		font-size: 14px;
@@ -134,7 +134,7 @@
 		</audio>
 		</div>
 
-		<div class="nigger">
+		<div class="footer">
 
    		 <p>(C) 2018 Doggoli. If you copy it i will be mad, but, buy me a coke and we're cool.</p>
 			
