--- a/radio.html
+++ b/radio.html
@@ -2,6 +2,7 @@
 	<head>
 
 		<title>Doggoli</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
    	 	<meta name="description" content="Hi, i'm Doggoli.">
 		<style>
 
